# eta-nexus

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AUTHORS.rst  CHANGELOG.md  CITATION.cff  LICENSE  README.md  README.rst  pyproject.toml
.gitlab/: update_release_mr_description.sh
.gitlab/docker/: build_and_push_docker.bat  build_and_push_docker.ps1  build_and_push_docker.sh  dockerfile
docs/: Makefile  conf.py  index.rst  make.bat
docs/connections/: Implementing_REST_Connections.rst  connection_manager.rst  emonio.rst  eneffco.rst  entsoe.rst  forecastsolar.rst  influx.rst  introduction.rst  live_connect.rst  modbus.rst  opcua.rst  smard.rst  sub_handlers.rst  wetterdienst.rst
docs/connectors/: ENTSO-E_Connection.rst  EnEffco_Connection.rst  Modbus_connection.rst  OpcUa_connection.rst  emonio.rst  forecast_solar_connection.rst  introduction.rst  live_connect.rst  sub_handlers.rst  wetterdienst_connection.rst
docs/examples/: examples.rst
docs/guide/: development.rst  faq.rst  install.rst  python_install.rst  secret_management.rst
docs/servers/: servers.rst
docs/timeseries/: timeseries.rst
docs/util/: util.rst
eta_connect/: __init__.py  util.py
eta_connect/connections/: base_classes.py  connection_utils.py  emonio_connection.py  eneffco_connection.py  entsoe_connection.py  forecastsolar_connection.py  live_connect.py  modbus_connection.py  opcua_connection.py  wetterdienst_connection.py
eta_connect/connectors/: __init__.py  base_classes.py  live_connect.py  node.py
eta_connect/nodes/: __init__.py  emonio_node.py  eneffco_node.py  entsoe_node.py  forecastsolar_node.py  local_node.py  modbus_node.py  node.py  node_utils.py  opcua_node.py  wetterdienst_node.py
eta_connect/servers/: __init__.py  modbus_server.py  opcua_server.py
eta_connect/subhandlers/: __init__.py  csv_subhandler.py  df_subhandler.py  multi_subhandler.py  subhandler.py
eta_connect/timeseries/: __init__.py  dataframes.py  scenarios.py
eta_connect/type_hints/: types_connectors.py
eta_connect/util/: __init__.py  auth_utils.py  io_utils.py  logging_utils.py  time_utils.py  type_annotations.py  utils.py
eta_nexus/: connection_manager.py
eta_nexus/connections/: __init__.py  base_classes.py  connection.py  connection_utils.py  emonio_connection.py  eneffco_connection.py  entsoe_connection.py  forecastsolar_connection.py  influx_connection.py  live_connect.py  modbus_connection.py  opcua_connection.py  smard_connection.py  wetterdienst_connection.py
eta_nexus/nodes/: __init__.py  emonio_node.py  eneffco_node.py  entsoe_node.py  forecastsolar_node.py  influx_node.py  modbus_node.py  node.py  node_utils.py  opcua_node.py  smard_node.py  wetterdienst_node.py
eta_nexus/servers/: modbus_server.py  opcua_server.py
eta_nexus/servers/loaders/: opcua_server_loader.py  servers_loader.py
eta_nexus/subhandlers/: csv_subhandler.py  df_subhandler.py  multi_subhandler.py  subhandler.py
eta_nexus/subscription_handlers/: __init__.py  csv_subscription_handler.py  df_subscription_handler.py  multi_subscription_handler.py
eta_nexus/timeseries/: dataframes.py
eta_nexus/util/: __init__.py  _influx_sql.py  auth_utils.py  io_utils.py  logging_utils.py  modbus_utils.py  time_utils.py  type_annotations.py  type_utils.py
examples/connections/: read_emonio_live.py  read_influx.py  read_series_eneffco.py  read_series_entsoe.py  read_series_forecastsolar.py  read_series_smard.py  read_series_wetterdienst.py
examples/connectors/: read_series_wetterdienst.py
examples/forecasting/: main.py
test/: conftest.py  test_connection_manager.py  test_util.py
test/resources/connection_manager/: config.toml  config_mixed.yaml
test/resources/live_connect/: config.json  config.yaml
test/test_connections/: test_connections_util.py  test_emonio.py  test_eneffco.py  test_entsoe.py  test_forecast_solar.py  test_influx.py  test_live_connect.py  test_modbus.py  test_multi_connect.py  test_node.py  test_opcua.py  test_read_series_http.py  test_rest_connection.py  test_smard.py  test_sub_handlers.py  test_wetterdienst.py
test/test_connections/cassettes/test_forecast_solar/: TestConnectionOperations.test_check_route.yaml  TestConnectionOperations.test_connection_from_node.yaml  TestConnectionOperations.test_raw_connection.yaml  TestConnectionOperations.test_read.yaml  TestConnectionOperations.test_read_data_types.yaml  TestConnectionOperations.test_read_multiple_nodes.yaml  TestConnectionOperations.test_read_series.yaml  TestConnectionOperations.test_watt_processing.yaml
test/test_connections/cassettes/test_smard/: test_multiple_nodes_integration.yaml  test_read_latest_value.yaml  test_read_series_integration.yaml
test/test_connectors/: test_connectors_util.py  test_cumulocity.py  test_emonio.py  test_eneffco.py  test_entsoe.py  test_forecast_solar.py  test_live_connect.py  test_modbus.py  test_multi_connect.py  test_node.py  test_opcua.py  test_sub_handlers.py  test_wetterdienst.py
test/test_examples/: test_connections.py  test_connections_forecast_solar.py  test_connections_smard.py  test_connectors.py
test/test_examples/cassettes/test_connections_forecast_solar/: test_example_read_forecast_solar.yaml
test/test_examples/cassettes/test_connections_smard/: test_example_read_smard.yaml
test/test_nodes/: test_influx_node.py  test_node.py
test/test_servers/: test_modbus.py  test_opcua.py  test_servers_loader.py
test/test_subhandlers/: test_subhandlers.py
test/test_timeseries/: test_dataframes.py
test/utilities/requests/: entsoe_request.py  smard_request.py  smard_sample_data.json
test/utilities/requests/entso_e_samples/: Price_sample.xml
test/utilities/vcr/: __init__.py  forecast_solar.py
