[project]
name = "eta-connect"
version = "v0.1.0"
description = "Provides a standardized way to connect to machines and devices in a factory or other factory systems"
license = "BSD-2-Clause"
readme = "README.rst"
requires-python = ">=3.10.16, <3.13.0"
authors = [
    {name = "Technical University of Darmstadt, Institute for Production Management, Technology and Machine Tools (PTW)", email="info@ptw.tu-darmstadt.de"}
]
maintainers = [
  {name = "Andreas Clement", email = "A.Clement@PTW.TU-Darmstadt.de"},
  {name = "Jerome Stock", email = "J.Stock@PTW.TU-Darmstadt.de"},
  {name= "Julius Balzer", email = "julius.balzer@stud.tu-darmstadt.de"}
]
keywords = [
    "connectivity", "servers", "iot", "multi-protocol", "eta-fabrik"
]
dynamic = ["classifiers", "dependencies"]

[project.urls]
homepage = "https://www.ptw.tu-darmstadt.de"
repository = "https://git.ptw.maschinenbau.tu-darmstadt.de/eta-fabrik/public/eta-connect"
documentation = "https://eta-connect.readthedocs.io/"
issues = "https://git.ptw.maschinenbau.tu-darmstadt.de/eta-fabrik/public/eta-connect/-/issues"

[tool.poetry]
requires-poetry = ">=2.0"

# Classifiers are defined in the poetry section to dynamically add the python version
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
include = [
    {path="examples/", format=["sdist", "wheel"]}
]

#  '^' limits to the next major version, '~' limits to the next minor version
# e.g. ^3.9.0: 3.9.0 <= x < 4.0.0 and ~3.9.0: 3.9.0 <= x < 3.10.0
[tool.poetry.dependencies]
# default dependencies of eta_connect
attrs = "^25.3.0"
python-dateutil = "^2.8.2"
numpy = "^2.0.0"
pandas = "~2.2.2"
xlrd = "^2.0.1"
asyncua-fork-for-eta-utility = "==1.0.7"
lxml = "^5.0.0"
requests = "^2.31.0"
pymodbustcp = "~0.3.0"
cryptography = "^44.0.2"
fmpy = "^0.3.5"
wetterdienst = "~0.97.0"  # breaking changes expected
requests-cache = "^1.2.0"
pyyaml = "^6.0.2"
toml = "^0.10.2"

[tool.poetry.group.examples.dependencies]
onnxruntime = ">=1.21.0"

[tool.poetry.group.dev.dependencies]
# tests
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pytest-timeout = "^2.3.1"
openpyxl = "^3.1.2"
# docs
sphinx = "^8.0.0"
sphinx-rtd-theme = "^3.0.0"
sphinx-copybutton = "^0.5.2"
esbonio = "^0.16.5"
# linting / formatting
pre-commit = "^4.2.0"
ruff = "~0.11.0"
codespell = "^2.3.0"
# typing
mypy = "~1.15"
types-python-dateutil = "^2.8.19.14"
types-requests = "^2.31.0.10"
types-pytz = "^2025.2.0.20250326"

[tool.mypy]
python_version = "3.10"
files = ["eta_connect", "examples"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
show_column_numbers = true

exclude = [
    "docs/conf.py",
    "^test/",
]

[[tool.mypy.overrides]]
module = [
    "fmpy.*",
    "pandas.*",
    "opcua.*",
    "pyModbusTCP.*",
    "lxml.*",
    "onnxruntime.*",
    "asyncua.*",
    "wetterdienst.*",
    "requests_cache.*",
    "toml.*",
    "yaml.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "test.*"
ignore_errors = true
[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning:.*site-packages.*"
addopts = ["--cov-config=pyproject.toml", "--color=yes"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s: %(name)s] %(message)s"
testpaths = [
    "test",
]
markers = [
    "disable_logging: Disable logging for the marked test",
]

# Configuration for pytest-cov
[tool.coverage.run]
source = [
    "eta_connect"
]
omit = [
    "*/venv/*",
    "*/.venv/*",
    "*/docs/*",
    "*/build/*",
    "*/dist/*",
    "*/eta_connect/type_hints/*",
]

[tool.coverage.report]
exclude_lines = [
    # These lines are excluded from coverage because they are not meant to be tested
    'pragma: no cover',
    'if TYPE_CHECKING:',
    'raise NotImplementedError',
    'pass',
]

[tool.ruff]

line-length = 120
indent-width = 4

required-version = ">=0.4.0"
target-version= "py39"

# Only fix with $ruff check --fix
fix = false

output-format = "concise"

[tool.ruff.lint]
select = [
    "F",       # Pyflakes
    "E", "W",  # Pycodestyle, Error and Warning
    "I",       # Isort
    "N",       # Pep8-naming conventions
    "UP",      # Pyupgrade
    "PL",      # Pylint
    "ERA",     # Eradicate
    "PD",      # Pandas-vet
    "NPY",     # NumPy-specific
    "RUF",     # Ruff

    # Flake8:
    # 2020, asyncio, bugbear, builtins, commas, comprehensions, future-annotations, implicit-str-concat
    "YTT", "ASYNC", "B", "A", "COM", "C4", "FA", "ISC",
    # logging, no-pep420, print, pyi, pytest-style, return, simplify, use-pathlib, todo
    "LOG", "INP", "T20", "PYI", "PT", "RET", "SIM", "PTH", "TD",
    ]

ignore = [
    "PLR2004",  # Pylint: magic values
    "SIM105",   # Don't forcce contextlib.suppress
    "TD002",    # Ignore TODO authors
    # Recommended to ignore as they conflict with the formatter
    "W191", "E111", "E114", "E117", "D206", "D300", "COM812", "COM819", "ISC001",
]


[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["PLC0414"]
"test/*" = ["RUF012"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pylint]
max-args = 15
max-branches = 21
max-statements = 62
max-returns = 6

[tool.codespell]
skip = "*.js, *.html, *.lock, */Manifest.toml, ./docs/_build"
ignore-words-list = ["Temperatur"]
quiet-level = 3

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
